syntax = "proto3";

package calculator;

option java_package = "com.pharosproduction.grpc.calculator";
option java_multiple_files = true;

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum_result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message AverageRequest {
    int32 number = 1;
}

message AverageResponse {
    double average = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    rpc ComputeAverage(stream AverageRequest) returns (AverageResponse) {};
}